# update-nuspec-action

./: .dockerignore  .gitignore  Dockerfile  GitVersion.yml  README.md  UpdateNuspecTool.slnx  action.yml  entrypoint.sh
.github/scripts/: package-release-source.sh  preview-archive-url.sh  publish-chocolatey-package.sh  publish-homebrew-core-pr.sh  publish-homebrew-preview-tap.sh  push-release-git-tags.sh  release-source-url.sh  setup-chocolatey-cli.sh  stage-chocolatey-package.sh  update-homebrew-core-formula.sh  update-homebrew-preview-formula.sh
.github/workflows/: build.yml  ci.yml  publish-chocolatey.yml  (+4 more)
Formula/: update-nuspec-preview.rb
UpdateNuspecTool/: AssemblyInfo.cs  CliHelper.cs  CliRunOptions.cs  ConsoleHelper.cs  CsprojPackageReferenceResolver.cs  Dependency.cs  DependencyComparisonResult.cs  GlobalUsings.cs  NuspecProcessorHelper.cs  PackageJsonChange.cs  PackageJsonProcessorHelper.cs  Program.cs  UpdateNuspecTool.csproj
UpdateNuspecTool.Tests/: BoilerplateDataFilterNuspecTests.cs  BoilerplateUrlNormalizerNuspecTests.cs  CliHelperTests.cs  CliParseTests.cs  ConsoleCapture.cs  ConsoleHelperTests.cs  CrossMessagingNuspecTests.cs  CsprojPackageReferenceResolverTests.cs  GlobalUsings.cs  MyPackageNuspecTests.cs  NuspecAssertionHelper.cs  NuspecFixtureTestBase.cs  NuspecProcessorErrorTests.cs  PackageJsonProcessorTests.cs  ProgramCliTests.cs  TestWorkspace.cs  ToolProcessRunner.cs  UpdateNuspecTool.Tests.csproj  UpdateNuspecToolGeneralTests.cs
azure-devops-extension/: README.md  license.md  overview.md  vss-extension.json  vss-extension.preview.json
docs/: ci-cd.md  distribution.md  packaging.md
packaging/: README.md
scripts/: package-release-binary.sh  pin-action-image.sh  publish-chocolatey-package.sh  publish-homebrew-core-pr.sh  resolve-action-image-tag.sh  update-homebrew-core-formula.sh  update-packaging-metadata.sh
tools/: UpdateNuspecTool
update-nuspec/: Cargo.toml
update-nuspec/src/: error.rs  lib.rs  main.rs  parser.rs  types.rs
update-nuspec/src/cli/: args.rs  console.rs  mod.rs  package_json.rs  run.rs
update-nuspec/tests/: cli.rs  lib.rs  main.rs  parser.rs  public_api.rs
update-nuspec/tests/cli/: args.rs  console.rs  package_json.rs  run.rs
update-nuspec/tests/support/: mod.rs
(+55 files in other folders)
