[package]
name = "update-nuspec"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Denis Peshkov"]
description = "CLI to sync NuGet dependencies in *.nuspec with PackageReference versions from matching *.csproj files"
documentation = "https://github.com/denis-peshkov/update-nuspec-action#readme"
license = "MIT"
homepage = "https://peshkov.biz/libraries"
repository = "https://github.com/denis-peshkov/update-nuspec-action"
readme = "../README.md"
keywords = ["cli", "nuget", "nuspec", "dotnet", "csproj"]
categories = ["command-line-utilities", "development-tools"]
default-run = "update-nuspec"
exclude = ["/.idea/"]

[[bin]]
name = "update-nuspec"
path = "src/main.rs"

[dependencies]
regex = "1.12"
roxmltree = "0.21.1"
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
xmltree = "0.12.0"

[dev-dependencies]
roxmltree = "0.21.1"
temp-env = "0.3"
tempfile = "3.27"

[[test]]
name = "args"
path = "tests/cli/args.rs"

[[test]]
name = "console"
path = "tests/cli/console.rs"

[[test]]
name = "package_json"
path = "tests/cli/package_json.rs"

[[test]]
name = "run"
path = "tests/cli/run.rs"

[lints.rust]
unsafe_code = "deny"
warnings = "deny"
